# motion-search

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  FUTURE_IMPROVEMENTS_PLAN.md  HIGHWAY_MIGRATION_PLAN.md  README.md
.github/workflows/: format-check.yml  tests.yml
docs/: optimization-guide.md
motion_search/: CSVWriter.cpp  CSVWriter.h  ComplexityAnalyzer.cpp  ComplexityAnalyzer.h  ComplexityNormalization.cpp  ComplexityNormalization.h  DataConverter.cpp  DataConverter.h  FFmpegSequenceReader.cpp  FFmpegSequenceReader.h  JSONWriter.cpp  JSONWriter.h  MotionVectorField.cpp  OutputData.h  OutputWriter.cpp  OutputWriter.h  XMLWriter.cpp  XMLWriter.h  Y4MSequenceReader.cpp  YUVSequenceReader.cpp  common.h  cpu.cpp  frame.cpp  frame.h  main.cpp  memory.cpp  moments.cpp  moments.disp.cpp  moments.h  motion_search.c  motion_search.cpp  motion_search.h
motion_search/asm/: moments.highway.cpp  moments.x86.sse2.c
tests/: CMakeLists.txt  generate_test_videos.sh  test_ffmpeg_reader.cpp  test_frame.cpp  test_integration.cpp  test_moments.cpp  test_motion_search.cpp
